# bridge_research

./: .gitignore  .gitmodules  CMakeLists.txt
conf/: a2c.yaml  against_wb5.yaml  against_wb5_search.yaml  pg.yaml  search.yaml
config/: a2c.yaml  a2c_2.yaml  against_wb5.yaml  policy_gradient.yaml
cpp/: CMakeLists.txt  base.h  bluechip_utils.cc  bluechip_utils.h  bridge_actor.cc  bridge_actor.h  bridge_constants.h  bridge_deal.cc  bridge_deal.h  bridge_env.h  bridge_envs.cc  bridge_envs.h  bridge_scoring.cc  bridge_scoring.h  bridge_state.cc  bridge_state.h  bridge_thread_loop.cc  bridge_thread_loop.h  bridge_utils.h  cards_and_ddts.h  context.h  dds.cc  dds.h  encode_bridge.h  generate_deals.h  imp_env.cc  imp_env.h  is_mcts.h  logging.h  model_locker.h  multi_agent_transition_buffer.cc  multi_agent_transition_buffer.h  pybind.cc  replay_buffer.cc  replay_buffer.h  sayc_bot.cc  sayc_bot.h  score_predictor.h  search.cc  search.h  (+11 more)
cpp/bridge_lib/: bridge_call.cc  bridge_call.h  bridge_card.cc  bridge_card.h  bridge_constants.h  bridge_deal.cc  bridge_deal.h  bridge_game.h  bridge_move.cc  bridge_move.h  bridge_scoring.h  bridge_state.cc  bridge_state.h  bridge_utils.cc  cards_and_ddts.h  dds_call.cc  dds_call.h  encoder.cc  encoder.h  game_parameters.cc  game_parameters.h
cpp/rl/: base.h  batch_runner.cc  batch_runner.h  batcher.cc  batcher.h  context.cc  context.h  logger.cc  logger.h  logging.h  model_locker.cc  model_locker.h  span.h  str_utils.cc  str_utils.h  tensor_dict.h  thread_loop.cc  thread_loop.h  types.h  utils.h
cpp/tests/: bluechip_utils_test.cc  bridge_scoring_test.cc  bridge_state_test.cc  cards_and_ddts.h  concurrent_queue_test.cc  dds_test.cc  str_utils_test.cc  test_bluechip_utils.h  test_bridge_scoring.h  test_bridge_state.h  test_imp_env.h
pysrc/: against_wb5.py  against_wb5_ensemble.py  against_wb5_search.py  agent_for_cpp.py  analyze.py  analyze_contract.py  analyze_opening_bid.py  belief_model.py  bluechip_bridge.py  bridge_bidding_imitation_learning.py  bridge_consts.py  bridge_vars.py  dds.py  evaluate.py  generate_dataset.py  generate_particles.py  generate_required_dataset.py  get_value_net_data.py  imitation_learning2.py  imp_result.py  make_rl_dataset_from_db.py  make_sl_dataset.py  nets.py  pbn.py  plot_figures.py  rl_cpp.pyi  search.py  temp.py  temp3.py  test_belief.py  test_belief_per_length.py  test_belief_per_length2.py  test_imitation_learning.py  train_a2c.py  train_a2c_2.py  train_belief.py  train_dd_predictor.py  train_score_predictor.py  train_score_predictor2.py  train_search.py  (+2 more)
pysrc/common_utils/: __init__.py  other_utils.py  torch_utils.py
pysrc/tests/: test_dds.py  test_pbn.py
src/: against_wb5.py  agent_for_cpp.py  analyze.py  bluechip_bridge.py  bridge_bidding_imitation_learning.py  dds.py  generate_required_dataset.py  global_vars.py  make_rl_dataset_from_db.py  nets.py  pbn.py  rl_cpp.cp38-win_amd64.pyd  rl_cpp.pyi  temp.py  threads_benchmark.py  train_a2c.py  train_policy_gradient.py  train_policy_gradient2.py  train_policy_gradient_cpp.py  utils.py
src/bridge/: __init__.py  against_wb5.py  agent_for_cpp.py  bluechip_bridge.py  bridge_bidding_imitation_learning.py  bridge_vars.py  dds.py  generate_dataset.py  global_vars.py  make_rl_dataset_from_db.py  pbn.py  rl_cpp.cp38-win_amd64.pyd  rl_cpp.pyi  temp.py  threads_benchmark.py  train_a2c.py  train_a2c_2.py  train_policy_gradient_cpp.py  utils.py
src/common_utils/: __init__.py  array_utils.py  other_utils.py  saver.py  torch_utils.py  value_stats.py
src/tests/: test_dds.py  test_pbn.py
